# WISE

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
wise/: __main__.py
wise/agents/: QAagent.py
wise/crawler/: scrapper.py
wise/templates/: PROMPT.py  SCHEMA.py
